--- a/back/lang/EN.lang
+++ b/back/lang/EN.lang
@@ -1,310 +1,6 @@
 {
-"chooseFile": "Choose file",
-"flightUploading": "Flight uploading",
-"exit": "Exit",
-"options": "Options",
-"on": "On",
-"off": "Off",
-"userOptions": "User Options",
-"printTableStep": "Print table step",
-"mainChartColor": "Main chart background color",
-"lineWidth": "Сhart lines width",
-"aggregatedStatistics": "Aggregated statistics",
-"flightInfoFilter": "Filter by flight info",
-"fdrType": "FDR type",
-"bort":"A/C",
-"voyage":"Flight",
-"departureFromDate":"Departure from date",
-"departureToDate":"Departure to date",
-"departureAirport": "Departure Airport",
-"arrivalAirport": "Arrival Airport",
-"monitoredParameters": "Monitored parameters",
-"putFlightFilter": "Put flight filter",
-"noMonitoredParamsOnSpecifyedFilter": "No monitored params on specifyed filter",
-"settlementsReport": "Report",
-"setParamsForReportGenerating": "Set params for report generating",
-"noDataToGenerateReport": "No data to generate report",
-"settlementsReportRowTitle":"Param",
-"settlementsReportRowCount":"Count",
-"settlementsReportRowMin":"Min",
-"settlementsReportRowAvg":"Avg",
-"settlementsReportRowSum":"Sum",
-"settlementsReportRowMax":"Max",
-
-"continueLabel": "Next",
-"tplHasBeenAdded": "Template added. Demonstrate how changes to refresh the page (Shift + F5)",
-"tplHasBeenDeleted": "Template deleted. To demonstrate how the changes refresh the page (Shift + F5)",
-"tplHasBeenEdit": "Template changed. Demonstrate how changes to refresh the page (Shift + F5)",
-"tplHasBeenSetAsDefault": "The default template set. Demonstrate how changes to refresh the page (Shift + F5)",
-
-"colorpickerOk" : "Accept",
-"colorpickerCancel" : "Cancel",
-"colorpickerNone" : "No",
-"colorpickerButton" : "Color",
-"colorpickerTitle" : "Select Color",
-"colorpickerTransparent" : "Transparent",
-
-"notAllFieldsMatched": "Not all the fields are filled",
-"waitAnswerText": "processing",
-"completeText": "Completed. Automatic redirection",
-
-"flights": "Flights",
-"incorrectDataFormat": "Invalid date format",
-"uploadingData": "Loading data",
-"noData": "Data corresponding criteria are absent",
-
-"errorFlightNotSelect":"Error. Flight is not selected",
-"flightSelectedChooseSlice":"Полет выбран. Укажите срез.",
-
-"apply": "Apply",
-"cancelAction": "Cancel",
-"closeLabel": "Close",
-
-"passwordsAreNotTheSame": "Passwords are not the same",
-"notAllFieldsMatched": "Not all the fields are filled",
-"returnToMain": "Return to main",
-"userCreatedSuccesfully": "Пользователь создан",
-"userCreationFailed": "Не удалось Create пользователя",
-"userAlreadyExist": "Пользователь с указанным User Nameом уже существует",
-
-"initial": "Исходный",
-"flightList": "Flights list",
-"inTwoColumns": "In Two Columns",
-"treeView": "Tree View",
-"tableView": "Table View",
-"byAditionalInfo": "By Aditional Info",
-"groupType" : "Type Group",
-
-"newFolder" : "New Folder",
-
-"fileMenu" : "Menu",
-"openItem" : "Open",
-"deleteItem" : "Delete",
-"renameItem" : "Rename",
-"exportItem" : "Export",
-"processItem" : "Process",
-"moveItem" : "Rename",
-"removeSelection" : "Cancel selection",
-"selectAll" : "Select all",
-"exportCoordinates" : "Export coordinates",
-"syncFlightHeaders": "Sync Headers",
-
-"flightFilesList": "Flight files for convertion",
-"flightsConvertSelected": "Convert selected",
-
-"flightUploadComplt": "Complete",
-"flightImportSuccess": "Flight import success. Refresh page",
-"flightImportFailed": "Flight import failed",
-
-"flightViewOptionsTimeRange": "Time Range",
-"saveParamsAsTpl": "Save as List",
-"flightViewOptionsEditTpls": "Change",
-"flightUploaderUpload": "Upload",
-"flightViewOptionsShow": "Graphics",
-
-"viewOptionsNextPage": "Next Page",
-"viewOptionsPrevPage": "Prev Page",
-"viewOptionsFirstPage": "First Page",
-"viewOptionsLastPage": "Last Page",
-"viewOptionsOf": "Of",
-
-"bruTypeGeneralInfoToList":"To List",
-"bruTypeTplsToViewOptions":"Options",
-"bruTypeLabel":"Registrator Type",
-"bruTypeTplActions":"Actions",
-"createType":"Create",
-"copyType":"Copy",
-"saveType":"Save",
-"deleteType":"Delete",
-"createTpl":"Create",
-"applyEditingTpl":"Apply",
-"defaultTpl":"Default",
-"deleteTpl":"Delete",
-"clearTplPatamsList":"Clear List",
-"tplNameCantBeBlank":"Name List!",
-"tplCantBeEmpty":"Empty!",
-
-"serverCommunicationError": "Server Communication Error",
-"loadingMessage": "Loading...",
-"noDataAvailable": "No Data",
-"addNewRecord": "Add",
-"editRecord": "Change",
-"areYouSure": "You Sure?",
-"deleteConfirmation": "Delete запись?",
-"save": "Save",
-"saving": "Saving...",
-"cancel": "Cancel",
-"deleteText": "Delete",
-"deleting": "Deleting...",
-"error": "Error",
-"close": "Close",
-"cannotLoadOptionsFor": "Невозможно Upload варианты для поля {0}",
-"pagingInfo": "Записи с {0} по {1} из {2}",
-"canNotDeletedRecords": "Невозможно Delete записи: {0} из {1}!",
-"deleteProggress": "Deleting {0} из {1} записей...",
-"pageSizeChangeLabel": "Строк",
-"gotoPageLabel": "На страницу",
-
-"apTable": "Analog Parametrs Table",
-
-"gradiTable": "Таблица градуировки",
-"srcTable": "Скрипт расчета",
-"editGradiTable": "Редактировать градуировку",
-"editSrc": "Редактировать скрипт",
-"gradiCode": "Code",
-"gradiPh": "Физика",
-"srcVal": "Скрипт",
-
-"paramCode": "Code",
-"paramName": "Имя",
-"dim": "Разм.",
-"paramType": "Тип",
-"channels": "Каналы",
-"koef": "Коэф.",
-"minus": "Минус",
-"mask": "Маска",
-"shift": "Сдвиг",
-"minVal": "Мин. зн.",
-"maxVal": "Макс. зн.",
-"prefix": "Префикс",
-
-"userActions": "User Actions",
-"userAdd" : "Add User",
-"userEdit" : "Edit User",
-"userDelete" : "Delete User",
-"userList" : "User List",
-"userSave" : "Save Yser",
-"userCancel" : "Cancel",
-"confimUserDeletion": "Confirm",
-"userCreaitonFailServerError": "Fail Server",
-
-"searchFlights": "Search by Flight",
-"searchFlightsApplyAlg": "Search",
-
-"calibration": "Calibration",
-"calibrationForFDR": "FDR",
-"calibrationCreate": "Create",
-"calibrationCreationForm": "Calibration Creation Form",
-"calibrationFor": "for",
-"calibrationName": "Name",
-"calibrationParamName": "Name",
-"calibrationParamCode": "Code",
-"calibrationParamChannels": "Channels",
-"calibrationValueAdd": "Add",
-"calibrationSave": "Save",
-"calibrationUpdate": "Update",
-"calibrationList": "To List",
-"calibrationsUnexist": "No calibrations",
-"calibrationDateCreation": "Creation Date",
-"calibrationDateLastEdit": "Last Edit",
-"calibrationControls": "Controls",
-"calibrationEdit": "Edit",
-"calibrationDelete": "Delete",
-"calibrationInputName": "Please input name to save",
-
-"chartPrintTable" : "Digital Table Excel",
-"chartPrintInNewWindow" : "Print Chart",
-"monochromeEventsPrint" : "Mono print",
-"eventListSave" : "Report",
-"saveChartTpl": "Мista snið-ð",
-
-"flights": "Flights",
-"fdrs": "FDR",
-"calibrations": "Calibration",
-"users": "Users",
-"results": "Results",
-"search": "Search",
-"fileImport": "Import",
-
-"dataTable": {
-    "sLengthMenu": "Показывать по _MENU_ записей на странице",
-    "sZeroRecords": "Search не дал результата",
-    "sInfo": "Показано с _START_ по _END_ запись из  _TOTAL_ ",
-    "sInfoEmpty": "Записи Non",
-    "sInfoFiltered": "(всего _MAX_ )",
-    "sSearch": "Search ",
-    "sProcessing": "Получение данных...",
-    "oPaginate": {
-        "sFirst": "Start",
-        "sNext": "Следующий",
-        "sPrevious": "Предыдущий",
-        "sLast": "End"
-    }
-},
-
-"jsTree": {
-    "create": "Create",
-    "rename": "Rename",
-    "remove": "Remove",
-    "export": "Export"
-},
-
-"indexPage":{
-    "title": "Welcome",
-    "search": "Search",
-    "find": "Find",
-    "send": "Send",
-    "fileImport": "Inport",
-    "fileConvert": "Covertation",
-    "filePreview": "Preview",
-    "chooseFile": "Choose File",
-    "helpTitle": "ShortInformation",
-
-    "sliceCreation": "Создание среза",
-    "sliceName": "Name",
-    "sliceCode": "Code Algorithmа",
-    "sliceList": "Перечень срезов",
-    "sliceCreationTime": "Дата создания",
-    "sliceLastModifyTime": "Дата последнего изменения",
-    "sliceParamsTableName": "ParamsList",
-    "sliceStatusAsEtalon": "Status",
-    "sliceSetAsEtalon": "Эталон",
-    "bruTypesList": "Перечень типов регистраторов",
-    "bruTypesName": "FDR",
-    "bruTypesStepLenth": "Duration кадра (в секундах)",
-    "bruTypesFrameLength": "Размер кадра (в байтах)",
-    "bruTypesWordLength": "Размер слова (в байтах)",
-    "bruTypesAditionalInfo": "Add Information",
-    "bruTypesNoAditionalInfo": "Отсутствует",
-    "usersList": "Перечень пользователей",
-    "usersLogin": "Имя пользователя",
-    "usersCompany": "Организация",
-    "usersPrivilege": "Привелигии",
-    "usersSubscribers": "Подписчики",
-    "userNoSubscribers": "Нет",
-    "etalonName": "Name эталона",
-    "sliceNotSetAsEtalon": "Отсутствует",
-    "engineList": "Перечень невязок двигателей",
-    "engineSerial": "Номер двигателя",
-    "engineFlightLastTime": "Дата последнего полета",
-    "engineSliceCodes": "Перечень типов срезов",
-    "engineDescreps": "Перечень невязок",
-    "departureAirport": "Departure Airport",
-    "arrivalAirport": "Arrival Airport",
-    "create": "Create",
-
-    "message": "Message",
-    "loginForm":"Welcome To Luch",
-    "login":"Login",
-    "userName":"User Name",
-    "pass":"Password",
-    "rememberMe":"Remember",
-    "loginFailed": "Login Failed",
-
-    "centring": "Center of Gravity",
-    "engines":"No Eng",
-    "firstOfficer": "F/O",
-    "flightView": "View",
-    "flightFollow": "Follow",
-    "flightUpload": "Loading",
-
-    "flightDelete": "Deleting",
-    "flightExport": "Export",
-    "flightImport": "Inport",
-    "userExit": "Exit",
-    "notAllowedByPrivilege" : "No privilege"
-},
-
+"indexPage":{},
+"bruTypesPage":{},
 "flightsPage":{
     "upload": "Upload",
     "flightsItem": "Flights",
@@ -434,7 +130,7 @@
     "emptyFlightComment": "Absent"
 },
 
-"printerPage":{
+"flightEventsPage":{
     "pasport" : "FLIGHT RECORDER ANALYSIS REPORT",
     "bort" : "A/C",
     "voyage":"Flight",
@@ -521,20 +217,6 @@
     "loginFailed": "Login Failed",
     "notAllowedByPrivilege" : "No privilege"
 },
-"slicePage":{
-    "sliceName" : "Name среза",
-    "selectedSlice" : "Выбранный срез",
-    "bort" : "A/C",
-    "voyage" : "Flights",
-    "engines" : "Номера двигателей",
-    "loginForm":"Welcome To Luch",
-    "login":"Login",
-    "userName":"User Name",
-    "pass":"Password",
-    "rememberMe":"Remember",
-    "loginFailed": "Login Failed",
-    "notAllowedByPrivilege" : "No privilege"
-},
 "chartPage":{
     "bort" : "A/C",
     "voyage":"Flight",
@@ -564,61 +246,6 @@
     "loginFailed": "Login Failed",
     "notAllowedByPrivilege" : "No privilege"
 },
-"followerPage":{
-    "bort" : "A/C",
-    "voyage":"Flight",
-    "flightDate": "Flight Date",
-    "time": "Time",
-    "loginForm":"Welcome To Luch",
-    "login":"Login",
-    "userName":"User Name",
-    "pass":"Password",
-    "rememberMe":"Remember",
-    "loginFailed": "Login Failed",
-    "notAllowedByPrivilege" : "No privilege"
-},
-
-"mapPage":{
-    "bort" : "A/C",
-    "voyage":"Flight",
-    "flightDate": "Flight Date",
-    "time": "Time",
-    "loginForm":"Welcome To Luch",
-    "login":"Login",
-    "userName":"User Name",
-    "pass":"Password",
-    "rememberMe":"Remember",
-    "loginFailed": "Login Failed",
-    "notAllowedByPrivilege" : "No privilege"
-},
-
-"modelPage":{
-    "bort" : "A/C",
-    "voyage":"Flight",
-    "flightDate": "Flight Date",
-    "time": "Time",
-    "loginForm":"Welcome To Luch",
-    "login":"Login",
-    "userName":"User Name",
-    "pass":"Password",
-    "rememberMe":"Remember",
-    "loginFailed": "Login Failed",
-    "notAllowedByPrivilege" : "No privilege"
-},
-
-"googleEarthPage":{
-    "bort" : "A/C",
-    "voyage":"Flight",
-    "flightDate": "Flight Date",
-    "time": "Time",
-    "loginForm":"Welcome To Luch",
-    "login":"Login",
-    "userName":"User Name",
-    "pass":"Password",
-    "rememberMe":"Remember",
-    "loginFailed": "Login Failed",
-    "notAllowedByPrivilege" : "No privilege"
-},
 
 "tablePage":{
     "bort" : "A/C",
@@ -632,96 +259,6 @@
     "pass":"Password",
     "rememberMe":"Remember",
     "loginFailed": "Login Failed",
-    "notAllowedByPrivilege" : "No privilege"
-},
-
-"diagnosticPage":{
-    "accordionReport": "Отчет",
-    "reportFromDate": "От даты",
-    "reportToDate": "До даты",
-    "reportFlightDate": "Flight Date",
-    "reportDiscrepLimits": "Типы допуска",
-    "limitType0": "0) в пределах допуска на погрешность определения значений",
-    "limitType1": "1) в пределах профилактического допуска на измерение значений",
-    "limitType2": "2) в пределах контрольного допуска на измерение значений",
-    "limitType3": "3) за пределами контрольного допуска на измерение значений",
-    "reportEtalon": "Эталон",
-    "reportSlice": "Срез",
-    "reportEngine": "Двигатель",
-    "reportDiscrep": "Невязка",
-    "reportDiscrepVal": "Значение",
-    "reportLimitType": "Тип допуска",
-    "reportLimits": "Граници допуска",
-    "reportComment": "Comment",
-    "accordionLog": "Хроника",
-    "accordionDiagnostic": "Двухмерная диагностика",
-    "etalonName": "Name эталона",
-    "etalonIgnore": "Игнорировать эталоны",
-    "engineSerial": "Номер двигателя",
-    "engineSerialList": "Перечень номеров двигателя",
-    "engineSlicesList": "Перечень доступных срезов",
-    "engineDiscrepAbscissa": "Невязка по абсциссе (X)",
-    "flights": "Flights",
-    "engineDiscrepOrdinate": "Невязки по ординате (Y)",
-    "engineDiscreps": "Невязки",
-    "addChart": "Построить график",
-    "discrepChartList": "Перечень графиков",
-    "editMarkings": "Настройки допусков",
-    "delChart": "Delete график",
-    "message": "Message",
-    "continueLabel": "Continue",
-    "loginForm":"Welcome To Luch",
-    "login":"Login",
-    "userName":"User Name",
-    "pass":"Password",
-    "rememberMe":"Remember",
-    "loginFailed": "Login Failed",
-    "notAllowedByPrivilege" : "No privilege"
-},
-
-"bruTypesPage":{
-    "generalInfo":"Общая инф.",
-    "templates":"Templates",
-    "cyclo":"Циклограмма",
-    "events":"Events",
-    "defaultTpl" : "Default",
-    "lastTpl" : "Last View",
-    "foundedEventsTplName" : "Возникшие Events",
-
-    "bruTypeCreation" : "Создание нового типа регистратора",
-    "bruTypeCreationForm":"Форма создания типа регистратора",
-    "bruTypeName":"Code регистратора (литиницей)",
-    "stepLength":"Duration кадра (в сек)",
-    "stepDivider":"Максимальная опростность (в Гц)",
-    "frameLength":"Длина кадра (в байтах)",
-    "wordLength":"Размер слова (в байтах)",
-    "aditionalInfo":"Add Information",
-    "headerLength":"Размер заголовка (в байтах)",
-    "frameSyncroCode":"Синхрослово (в хексе)",
-    "previewParams":"Парамеры Previewа",
-    "collada":"Модель",
-    "headerScr":"Algorithm обработки заголовка",
-    "bruTypeCreate":"Create",
-    "apTable":"Analog Parametrs Table",
-    "apCode":"Code",
-    "apName":"Имя",
-    "apDim":"Ед. изм.",
-    "apChannel":"Каналы",
-    "apMask":"Маска",
-    "apCoe":"Коефициент",
-    "apMinus":"Минус",
-    "apShift":"Сдвиг",
-    "apType":"Тип",
-    "apMinVal":"Мин. значение",
-    "apMaxVal":"Макс. значение",
-    "apColor":"Color Default",
-    "apXY":"Градуировака",
-    "apSrc":"Algorithm расчета",
-    "gradiCode": "Code",
-    "gradiPh": "Физика",
-    "addRow":"Add строчку",
-    "bpTable":"Таблица разовых комманд",
-    "message": "Message",
     "notAllowedByPrivilege" : "No privilege"
 },
 
