--- a/back/lang/ES.lang
+++ b/back/lang/ES.lang
@@ -1,310 +1,6 @@
 {
-"chooseFile": "Choose file",
-"flightUploading": "Flight uploading",
-"exit": "Salida",
-"options": "Opciones",
-"on": "On",
-"off": "Off",
-"userOptions": "User Options",
-"printTableStep": "Paso mesa de impresión",
-"mainChartColor": "Color principal fondo de la carta",
-"lineWidth": "Сhart líneas de ancho",
-"aggregatedStatistics": "Aggregated statistics",
-"flightInfoFilter": "Filter by flight info",
-"fdrType": "Tipo de registro",
-"bort":"Número de aeronaves",
-"voyage":"Vuelo",
-"departureFromDate":"Departure from date",
-"departureToDate":"Departure to date",
-"departureAirport": "Aeropuerto de salida",
-"arrivalAirport": "Aterrizaje de aeropuertos",
-"monitoredParameters": "Monitored parameters",
-"putFlightFilter": "Put flight filter",
-"noMonitoredParamsOnSpecifyedFilter": "No monitored params on specifyed filter",
-"settlementsReport": "Report",
-"setParamsForReportGenerating": "Set params for report generating",
-"noDataToGenerateReport": "No data to generate report",
-"settlementsReportRowTitle":"Param",
-"settlementsReportRowCount":"Count",
-"settlementsReportRowMin":"Min",
-"settlementsReportRowAvg":"Avg",
-"settlementsReportRowSum":"Sum",
-"settlementsReportRowMax":"Max",
-
-"continueLabel": "Además",
-"tplHasBeenAdded": "Plantilla añadió. (Shift+F5)",
-"tplHasBeenDeleted": "Plantilla eliminado. (Shift+F5)",
-"tplHasBeenEdit": "Plantilla cambió. (Shift+F5)",
-"tplHasBeenSetAsDefault": "La plantilla por defecto se establece. (Shift+F5)",
-
-"colorpickerOk" : "Adoptar",
-"colorpickerCancel" : "Cancelar",
-"colorpickerNone" : "No",
-"colorpickerButton" : "Color",
-"colorpickerTitle" : "Seleccionar Color",
-"colorpickerTransparent" : "Transparente",
-
-"notAllFieldsMatched": "No se rellenan todos los campos",
-"waitAnswerText": "Transformación",
-"completeText": "Terminado",
-
-"flights": "Vuelo",
-"incorrectDataFormat": "Formato de fecha no válida",
-"uploadingData": "la carga de datos",
-"noData": "Datos no disponibles",
-
-"errorFlightNotSelect":"Error. Volar no está seleccionada",
-"flightSelectedChooseSlice":"Полет выбран. especificar срез.",
-
-"apply": "Aplicar",
-"cancelAction": "Cancelar",
-"closeLabel": "Cerca",
-
-"passwordsAreNotTheSame": "Las contraseñas no coinciden",
-"notAllFieldsMatched": "No se rellenan todos los campos",
-"returnToMain": "Volver al inicio",
-"userCreatedSuccesfully": "Creado por el usuario",
-"userCreationFailed": "No se pudo crear un usuario",
-"userAlreadyExist": "Usuario con esta entrada ya existe",
-
-"initial": "Padre",
-"flightList": "lista de los vuelos",
-"inTwoColumns": "Las dos columnas",
-"treeView": "Madera",
-"tableView": "Mesa",
-"byAditionalInfo": "A medida que más inf.",
-"groupType" : "Tipo de agrupación",
-
-"newFolder" : "El nuevo catálogo",
-
-"fileMenu" : "Menú",
-"openItem" : "Abierto",
-"deleteItem" : "Borrar",
-"renameItem" : "Rebautizar",
-"exportItem" : "Exportación",
-"processItem" : "Editar",
-"moveItem" : "Movimiento",
-"removeSelection" : "Cancelar asignación",
-"selectAll" : "Seleccionar todo",
-"exportCoordinates" : "Export coordinates",
-"syncFlightHeaders": "Sincronizar los datos de identificación",
-
-"flightFilesList": "La lista de archivos para convertir",
-"flightsConvertSelected": "Convertir",
-
-"flightUploadComplt": "Terminado",
-"flightImportSuccess": "El vuelo se ha importado correctamente. Actualizar la página",
-"flightImportFailed": "Error al importar el vuelo",
-
-"flightViewOptionsTimeRange": "Intervalo",
-"saveParamsAsTpl": "La plantilla",
-"flightViewOptionsEditTpls": "Enmendar",
-"flightUploaderUpload": "Descargar",
-"flightViewOptionsShow": "Calendario",
-
-"viewOptionsNextPage": "Página siguiente",
-"viewOptionsPrevPage": "Anterior",
-"viewOptionsFirstPage": "Página delantera",
-"viewOptionsLastPage": "última página",
-"viewOptionsOf": "De",
-
-"bruTypeGeneralInfoToList":"a la lista",
-"bruTypeTplsToViewOptions":"Opciones",
-"bruTypeLabel":"Tipo de registro",
-"bruTypeTplActions":"Acciones plantillas",
-"createType":"Crear",
-"copyType":"Copia",
-"saveType":"Conservar",
-"deleteType":"Borrar",
-"createTpl":"Crear",
-"applyEditingTpl":"Aplicar",
-"defaultTpl":"Por defecto",
-"deleteTpl":"Borrar",
-"clearTplPatamsList":"Eliminar selección",
-"tplNameCantBeBlank":"Introduzca un nombre para la plantilla!",
-"tplCantBeEmpty":"Seleccione los parámetros de plantilla!",
-
-"serverCommunicationError": "Error de comunicación",
-"loadingMessage": "Carga...",
-"noDataAvailable": "Datos no disponibles",
-"addNewRecord": "Añadir",
-"editRecord": "Enmendar",
-"areYouSure": "Seguro?",
-"deleteConfirmation": "Borrar registro?",
-"save": "Conservar",
-"saving": "Preservación...",
-"cancel": "Cancelación",
-"deleteText": "Borrar",
-"deleting": "Eliminación...",
-"error": "Error",
-"close": "Cerca",
-"cannotLoadOptionsFor": "Невозможно Descargar варианты для поля {0}",
-"pagingInfo": "Записи с {0} по {1} из {2}",
-"canNotDeletedRecords": "Невозможно Borrar записи: {0} из {1}!",
-"deleteProggress": "Eliminación {0} из {1} записей...",
-"pageSizeChangeLabel": "Строк",
-"gotoPageLabel": "На страницу",
-
-"apTable": "Mesa parámetros analógicos",
-
-"gradiTable": "Mesa Graduación",
-"srcTable": "Script de cálculo",
-"editGradiTable": "Editar clasificación",
-"editSrc": "Editar el script",
-"gradiCode": "Código",
-"gradiPh": "Física",
-"srcVal": "Guión",
-
-"paramCode": "Código",
-"paramName": "Nombre",
-"dim": "Dim.",
-"paramType": "Tipo",
-"channels": "Canales",
-"koef": "Conv.",
-"minus": "Menos",
-"mask": "lugar",
-"shift": "Cambio",
-"minVal": "minVal",
-"maxVal": "maxVal",
-"prefix": "prefix",
-
-"userActions": "Acciones sobre los usuarios",
-"userAdd" : "Crear",
-"userEdit" : "Editar",
-"userDelete" : "Borrar",
-"userList" : "Lista",
-"userSave" : "Conservar",
-"userCancel" : "Cancelar",
-"confimUserDeletion": "Confirmar",
-"userCreaitonFailServerError": "Error",
-
-"searchFlights": "Búsqueda de vuelos",
-"searchFlightsApplyAlg": "Encontrar",
-
-"calibration": "Calibration",
-"calibrationForFDR": "FDR",
-"calibrationCreate": "Create",
-"calibrationCreationForm": "Calibration Creation Form",
-"calibrationFor": "for",
-"calibrationName": "Name",
-"calibrationParamName": "Name",
-"calibrationParamCode": "Code",
-"calibrationParamChannels": "Channels",
-"calibrationValueAdd": "Add",
-"calibrationSave": "Save",
-"calibrationUpdate": "Update",
-"calibrationList": "To List",
-"calibrationsUnexist": "No calibrations",
-"calibrationDateCreation": "Creation Date",
-"calibrationDateLastEdit": "Last Edit",
-"calibrationControls": "Controls",
-"calibrationEdit": "Edit",
-"calibrationDelete": "Delete",
-"calibrationInputName": "Please input name to save",
-
-"chartPrintTable" : "Pantalla Excel",
-"chartPrintInNewWindow" : "Calendario Impresión",
-"monochromeEventsPrint" : "Mono Impresión",
-"eventListSave" : "Formulario",
-"saveChartTpl": "Save tem-t",
-
-"flights": "Flights",
-"fdrs": "FDR",
-"calibrations": "Calibration",
-"users": "Users",
-"results": "Results",
-"search": "Search",
-"fileImport": "Importaciones",
-
-"dataTable": {
-    "sLengthMenu": "Visualización _MENU_ registros por página",
-    "sZeroRecords": "No hay ningún resultado",
-    "sInfo": "resultados _START_ e _END_ registro de  _TOTAL_ ",
-    "sInfoEmpty": "entradas que faltan",
-    "sInfoFiltered": "(Solamente _MAX_ )",
-    "sSearch": "Búsqueda",
-    "sProcessing": "Recuperando datos...",
-    "oPaginate": {
-        "sFirst": "Principio",
-        "sNext": "Siguiente",
-        "sPrevious": "Anterior",
-        "sLast": "Final"
-    }
-},
-
-"jsTree": {
-    "create": "Crear",
-    "rename": "Rebautizar",
-    "remove": "Borrar",
-    "export": "Exportación"
-},
-
-"indexPage":{
-    "title": "Bienvenida",
-    "search": "Búsqueda",
-    "find": "Encontrar",
-    "send": "Para enviar",
-    "fileImport": "Importaciones",
-    "fileConvert": "Sobre.",
-    "filePreview": "Preestreno",
-    "chooseFile": "Seleccione un archivo",
-    "helpTitle": "Una breve información",
-
-    "sliceCreation": "Создание среза",
-    "sliceName": "Nombre",
-    "sliceCode": "Código Algoritmoа",
-    "sliceList": "Lista срезов",
-    "sliceCreationTime": "Дата создания",
-    "sliceLastModifyTime": "Дата последнего изменения",
-    "sliceParamsTableName": "Parámetros",
-    "sliceStatusAsEtalon": "Estatus",
-    "sliceSetAsEtalon": "Estándar",
-    "bruTypesList": "Lista типов регистраторов",
-    "bruTypesName": "Tipo de registro",
-    "bruTypesStepLenth": "Duración кадра (в секундах)",
-    "bruTypesFrameLength": "Размер кадра (в байтах)",
-    "bruTypesWordLength": "Размер слова (в байтах)",
-    "bruTypesAditionalInfo": "Extras. información",
-    "bruTypesNoAditionalInfo": "Отсутствует",
-    "usersList": "Lista пользователей",
-    "usersLogin": "Nombre пользователя",
-    "usersCompany": "Organización",
-    "usersPrivilege": "Привелигии",
-    "usersSubscribers": "Подписчики",
-    "userNoSubscribers": "Нет",
-    "etalonName": "Nombre Estándarа",
-    "sliceNotSetAsEtalon": "Отсутствует",
-    "engineList": "Lista невязок двигателей",
-    "engineSerial": "Номер двигателя",
-    "engineFlightLastTime": "Дата последнего полета",
-    "engineSliceCodes": "Lista типов срезов",
-    "engineDescreps": "Lista невязок",
-    "departureAirport": "Aeropuerto de salida",
-    "arrivalAirport": "Aterrizaje de aeropuertos",
-    "create": "Crear",
-
-    "message": "Mensaje",
-    "loginForm":"Bienvenido a Luch",
-    "login":"Autorizar",
-    "userName":"Login",
-    "pass":"Contraseña",
-    "rememberMe":"Recordar",
-    "loginFailed": "Error de autorización",
-
-    "centring": "Alineación",
-    "engines":"Salas de máquinas",
-    "firstOfficer": "Capitán",
-    "flightView": "Crítica",
-    "flightFollow": "Siguiente",
-    "flightUpload": "Carga",
-
-    "flightDelete": "Eliminación",
-    "flightExport": "Exportaciones",
-    "flightImport": "Importaciones",
-    "userExit": "Salida",
-    "notAllowedByPrivilege" : "Privilegios insuficientes"
-},
-
+"indexPage":{},
+"bruTypesPage":{},
 "flightsPage":{
     "upload": "Descargar",
     "flightsItem": "Vuelo",
@@ -434,7 +130,7 @@
     "emptyFlightComment": "Absent"
 },
 
-"printerPage":{
+"flightEventsPage":{
     "pasport" : "El informe sobre el procesamiento de información de vuelo",
     "bort" : "Avión",
     "voyage":"Vuelo",
@@ -521,20 +217,6 @@
     "loginFailed": "Error de autorización",
     "notAllowedByPrivilege" : "Privilegios insuficientes"
 },
-"slicePage":{
-    "sliceName" : "Nombre среза",
-    "selectedSlice" : "Выбранный срез",
-    "bort" : "Avión",
-    "voyage" : "Vuelo",
-    "engines" : "Номера двигателей",
-    "loginForm":"Bienvenido a Luch",
-    "login":"Autorizar",
-    "userName":"Login",
-    "pass":"Contraseña",
-    "rememberMe":"Recordar",
-    "loginFailed": "Error de autorización",
-    "notAllowedByPrivilege" : "Privilegios insuficientes"
-},
 "chartPage":{
     "bort" : "Avión",
     "voyage":"Vuelo",
@@ -564,62 +246,6 @@
     "loginFailed": "Error de autorización",
     "notAllowedByPrivilege" : "Privilegios insuficientes"
 },
-"followerPage":{
-    "bort" : "Avión",
-    "voyage":"Vuelo",
-    "flightDate": "Fecha del vuelo",
-    "time": "Tiempo",
-    "loginForm":"Bienvenido a Luch",
-    "login":"Autorizar",
-    "userName":"Login",
-    "pass":"Contraseña",
-    "rememberMe":"Recordar",
-    "loginFailed": "Error de autorización",
-    "notAllowedByPrivilege" : "Privilegios insuficientes"
-},
-
-"mapPage":{
-    "bort" : "Avión",
-    "voyage":"Vuelo",
-    "flightDate": "Fecha del vuelo",
-    "time": "Tiempo",
-    "loginForm":"Bienvenido a Luch",
-    "login":"Autorizar",
-    "userName":"Login",
-    "pass":"Contraseña",
-    "rememberMe":"Recordar",
-    "loginFailed": "Error de autorización",
-    "notAllowedByPrivilege" : "Privilegios insuficientes"
-},
-
-"modelPage":{
-    "bort" : "Avión",
-    "voyage":"Vuelo",
-    "flightDate": "Fecha del vuelo",
-    "time": "Tiempo",
-    "loginForm":"Bienvenido a Luch",
-    "login":"Autorizar",
-    "userName":"Login",
-    "pass":"Contraseña",
-    "rememberMe":"Recordar",
-    "loginFailed": "Error de autorización",
-    "notAllowedByPrivilege" : "Privilegios insuficientes"
-},
-
-"googleEarthPage":{
-    "bort" : "Avión",
-    "voyage":"Vuelo",
-    "flightDate": "Fecha del vuelo",
-    "time": "Tiempo",
-    "loginForm":"Bienvenido a Luch",
-    "login":"Autorizar",
-    "userName":"Login",
-    "pass":"Contraseña",
-    "rememberMe":"Recordar",
-    "loginFailed": "Error de autorización",
-    "notAllowedByPrivilege" : "Privilegios insuficientes"
-},
-
 "tablePage":{
     "bort" : "Avión",
     "voyage":"Vuelo",
@@ -634,97 +260,6 @@
     "loginFailed": "Error de autorización",
     "notAllowedByPrivilege" : "Privilegios insuficientes"
 },
-
-"diagnosticPage":{
-    "accordionReport": "Отчет",
-    "reportFromDate": "От даты",
-    "reportToDate": "До даты",
-    "reportFlightDate": "Fecha del vuelo",
-    "reportDiscrepLimits": "Типы допуска",
-    "limitType0": "0) в пределах допуска на погрешность определения значений",
-    "limitType1": "1) в пределах профилактического допуска на измерение значений",
-    "limitType2": "2) в пределах контрольного допуска на измерение значений",
-    "limitType3": "3) за пределами контрольного допуска на измерение значений",
-    "reportEtalon": "Estándar",
-    "reportSlice": "Срез",
-    "reportEngine": "Двигатель",
-    "reportDiscrep": "Невязка",
-    "reportDiscrepVal": "Значение",
-    "reportLimitType": "Tipo допуска",
-    "reportLimits": "Граници допуска",
-    "reportComment": "Comentario",
-    "accordionLog": "Хроника",
-    "accordionDiagnostic": "Двухмерная диагностика",
-    "etalonName": "Nombre Estándarа",
-    "etalonIgnore": "Игнорировать Estándarы",
-    "engineSerial": "Номер двигателя",
-    "engineSerialList": "Lista номеров двигателя",
-    "engineSlicesList": "Lista доступных срезов",
-    "engineDiscrepAbscissa": "Невязка по абсциссе (X)",
-    "flights": "Vuelo",
-    "engineDiscrepOrdinate": "Невязки по ординате (Y)",
-    "engineDiscreps": "Невязки",
-    "addChart": "Построить Calendario",
-    "discrepChartList": "Lista Calendarioов",
-    "editMarkings": "Настройки допусков",
-    "delChart": "Borrar Calendario",
-    "message": "Mensaje",
-    "continueLabel": "Proceder",
-    "loginForm":"Bienvenido a Luch",
-    "login":"Autorizar",
-    "userName":"Login",
-    "pass":"Contraseña",
-    "rememberMe":"Recordar",
-    "loginFailed": "Error de autorización",
-    "notAllowedByPrivilege" : "Privilegios insuficientes"
-},
-
-"bruTypesPage":{
-    "generalInfo":"Inf general.",
-    "templates":"Plantillas",
-    "cyclo":"Ciclograma",
-    "events":"Eventos",
-    "defaultTpl" : "Por defecto",
-    "lastTpl" : "Conclusiones extremas",
-    "foundedEventsTplName" : "Surgido Eventos",
-
-    "bruTypeCreation" : "Создание нового типа регистратора",
-    "bruTypeCreationForm":"Форма создания типа регистратора",
-    "bruTypeName":"Código регистратора (литиницей)",
-    "stepLength":"Duración кадра (в сек)",
-    "stepDivider":"Максимальная опростность (в Гц)",
-    "frameLength":"Длина кадра (в байтах)",
-    "wordLength":"Размер слова (в байтах)",
-    "aditionalInfo":"Extras. información",
-    "headerLength":"Размер заголовка (в байтах)",
-    "frameSyncroCode":"Синхрослово (в хексе)",
-    "previewParams":"Парамеры Preestrenoа",
-    "collada":"Модель",
-    "headerScr":"Algoritmo обработки заголовка",
-    "bruTypeCreate":"Crear",
-    "apTable":"Mesa parámetros analógicos",
-    "apCode":"Código",
-    "apName":"Nombre",
-    "apDim":"Ед. изм.",
-    "apChannel":"Canales",
-    "apMask":"lugar",
-    "apCoe":"Коефициент",
-    "apMinus":"Menos",
-    "apShift":"Cambio",
-    "apType":"Tipo",
-    "apMinVal":"Мин. значение",
-    "apMaxVal":"Макс. значение",
-    "apColor":"Color Por defecto",
-    "apXY":"Градуировака",
-    "apSrc":"Algoritmo расчета",
-    "gradiCode": "Código",
-    "gradiPh": "Física",
-    "addRow":"Añadir строчку",
-    "bpTable":"Mesa разовых комманд",
-    "message": "Mensaje",
-    "notAllowedByPrivilege" : "Privilegios insuficientes"
-},
-
 "userPage":{
     "loginForm":"Bienvenido a Luch",
     "rememberMe":"Recordar",
