--- a/back/lang/RU.lang
+++ b/back/lang/RU.lang
@@ -1,310 +1,6 @@
 {
-"chooseFile": "Выбрать файл",
-"flightUploading": "Загрузка полета",
-"exit": "Выход",
-"options": "Настройки",
-"on": "Вкл",
-"off": "Выкл",
-"userOptions": "Пользовательские настройки",
-"printTableStep": "Шаг цифропечати",
-"mainChartColor": "Заливка графика",
-"lineWidth": "Толщина линий на графике",
-"aggregatedStatistics": "Агрегированая статистика",
-"flightInfoFilter": "Фильтр по полетным данным",
-"fdrType": "Тип регистратора",
-"bort":"Номер борта",
-"voyage":"Рейс",
-"departureFromDate":"От даты отправления",
-"departureToDate":"До даты отправления",
-"departureAirport": "Аэропорт вылета",
-"arrivalAirport": "Аэропорт посадки",
-"monitoredParameters": "Отслеживаемые параметры",
-"putFlightFilter": "Задайте параметры фильтра",
-"noMonitoredParamsOnSpecifyedFilter": "Нет отслеживаемых параметров по указанному фильтру",
-"settlementsReport": "Результаты",
-"setParamsForReportGenerating": "Задайте параметры для формирования результатов",
-"noDataToGenerateReport": "Нет данных для формирования результатов",
-"settlementsReportRowTitle":"Параметр",
-"settlementsReportRowCount":"Количество",
-"settlementsReportRowMin":"Мин",
-"settlementsReportRowAvg":"Среднее",
-"settlementsReportRowSum":"Сумма",
-"settlementsReportRowMax":"Макс",
-
-"continueLabel": "Далее",
-"tplHasBeenAdded": "Шаблон добавлен. Для приминения изменений обновите страницу (Shift+F5)",
-"tplHasBeenDeleted": "Шаблон удален. Для приминения изменений обновите страницу (Shift+F5)",
-"tplHasBeenEdit": "Шаблон изменен. Для приминения изменений обновите страницу (Shift+F5)",
-"tplHasBeenSetAsDefault": "Шаблон по умолчанию установлен. Для приминения изменений обновите страницу (Shift+F5)",
-
-"colorpickerOk" : "Принять",
-"colorpickerCancel" : "Отменить",
-"colorpickerNone" : "Никакой",
-"colorpickerButton" : "Цвет",
-"colorpickerTitle" : "Выбрать цвет",
-"colorpickerTransparent" : "Прозрачный",
-
-"notAllFieldsMatched": "Не все поля заполнены",
-"waitAnswerText": "обработка",
-"completeText": "Завершено. Автоматическое перенаправление",
-
-"flights": "Полеты",
-"incorrectDataFormat": "Неверный формат даты",
-"uploadingData": "Загрузка данных",
-"noData": "Данные, соответствующие критериям отсутствуют",
-
-"errorFlightNotSelect":"Ошибка. Полет не выбран",
-"flightSelectedChooseSlice":"Полет выбран. Укажите срез.",
-
-"apply": "Принять",
-"cancelAction": "Отменить",
-"closeLabel": "Закрыть",
-
-"passwordsAreNotTheSame": "Парали не совпадают",
-"notAllFieldsMatched": "Не все поля заполнены",
-"returnToMain": "Вернуться на главную",
-"userCreatedSuccesfully": "Пользователь создан",
-"userCreationFailed": "Не удалось создать пользователя",
-"userAlreadyExist": "Пользователь с указанным логином уже существует",
-
-"initial": "Исходный",
-"flightList": "Перечень полетов",
-"inTwoColumns": "В две колонки",
-"treeView": "Дерево",
-"tableView": "Таблица",
-"byAditionalInfo": "По доп. инф.",
-"groupType" : "Тип группировки",
-
-"newFolder" : "Новый каталог",
-
-"fileMenu" : "Меню",
-"openItem" : "Открыть",
-"deleteItem" : "Удалить",
-"renameItem" : "Переименовать",
-"exportItem" : "Экспортировать",
-"processItem" : "Обработать",
-"moveItem" : "Переместить",
-"removeSelection" : "Отменить выделение",
-"selectAll" : "Выбрать все",
-"exportCoordinates" : "Выгрузить маршрут",
-"syncFlightHeaders": "Синхронизировать опознавательные данные",
-
-"flightFilesList": "Перечень файлов для конвертирования",
-"flightsConvertSelected": "Конв. выбранное",
-
-"flightUploadComplt": "Завершено",
-"flightImportSuccess": "Полет успешно импортирован. Обновите страницу",
-"flightImportFailed": "Ошибка при импортировании полета",
-
-"flightViewOptionsTimeRange": "Интервал",
-"saveParamsAsTpl": "В шаблон",
-"flightViewOptionsEditTpls": "Изменить",
-"flightUploaderUpload": "Загрузить",
-"flightViewOptionsShow": "График",
-
-"viewOptionsNextPage": "Следующая страница",
-"viewOptionsPrevPage": "Предыдущая страница",
-"viewOptionsFirstPage": "Первая страница",
-"viewOptionsLastPage": "Последняя страница",
-"viewOptionsOf": "Из",
-
-"bruTypeGeneralInfoToList":"К перечню",
-"bruTypeTplsToViewOptions":"Опции",
-"bruTypeLabel":"Тип регистратора",
-"bruTypeTplActions":"Действия с шаблонами",
-"createType":"Создать",
-"copyType":"Копировать",
-"saveType":"Сохранить",
-"deleteType":"Удалить",
-"createTpl":"Создать",
-"applyEditingTpl":"Применить",
-"defaultTpl":"По умолчанию",
-"deleteTpl":"Удалить",
-"clearTplPatamsList":"Снять выделения",
-"tplNameCantBeBlank":"Введите название шаблона!",
-"tplCantBeEmpty":"Выберите параметры шаблона!",
-
-"serverCommunicationError": "Ошибка связи с сервером.",
-"loadingMessage": "Загрузка...",
-"noDataAvailable": "Данные отсутствуют",
-"addNewRecord": "Добавить",
-"editRecord": "Изменить",
-"areYouSure": "Вы уверены?",
-"deleteConfirmation": "Удалить запись?",
-"save": "Сохранить",
-"saving": "Сохранение...",
-"cancel": "Отмена",
-"deleteText": "Удалить",
-"deleting": "Удаление...",
-"error": "Ошибка",
-"close": "Закрыть",
-"cannotLoadOptionsFor": "Невозможно загрузить варианты для поля {0}",
-"pagingInfo": "Записи с {0} по {1} из {2}",
-"canNotDeletedRecords": "Невозможно удалить записи: {0} из {1}!",
-"deleteProggress": "Удаление {0} из {1} записей...",
-"pageSizeChangeLabel": "Строк",
-"gotoPageLabel": "На страницу",
-
-"apTable": "Таблица аналоговых параметров",
-
-"gradiTable": "Таблица градуировки",
-"srcTable": "Скрипт расчета",
-"editGradiTable": "Редактировать градуировку",
-"editSrc": "Редактировать скрипт",
-"gradiCode": "Код",
-"gradiPh": "Физика",
-"srcVal": "Скрипт",
-
-"paramCode": "Код",
-"paramName": "Имя",
-"dim": "Разм.",
-"paramType": "Тип",
-"channels": "Каналы",
-"koef": "Коэф.",
-"minus": "Минус",
-"mask": "Маска",
-"shift": "Сдвиг",
-"minVal": "Мин. зн.",
-"maxVal": "Макс. зн.",
-"prefix": "Префикс",
-
-"userActions": "Действия над пользователями",
-"userAdd" : "Создать",
-"userEdit" : "Редактировать",
-"userDelete" : "Удалить",
-"userList" : "Перечень",
-"userSave" : "Сохранить",
-"userCancel" : "Отменить",
-"confimUserDeletion": "Подтвердите удаление пользователей",
-"userCreaitonFailServerError": "Ошибка связи при попытке создания пользователя. Попробуйте позже.",
-
-"searchFlights": "Поиск по полетам",
-"searchFlightsApplyAlg": "Найти",
-
-"calibration": "Градуировки",
-"calibrationForFDR": "Тип регистратора",
-"calibrationCreate": "Создать",
-"calibrationCreationForm": "Форма создатания градуировки",
-"calibrationFor": "для",
-"calibrationName": "Название",
-"calibrationParamName": "Название",
-"calibrationParamCode": "Код",
-"calibrationParamChannels": "Каналы",
-"calibrationValueAdd": "Добавить",
-"calibrationSave": "Сохранить",
-"calibrationUpdate": "Обновить",
-"calibrationList": "К списку",
-"calibrationsUnexist": "Градуировки отсутствуют",
-"calibrationDateCreation": "Дата создания",
-"calibrationDateLastEdit": "Дата последенего редактирования",
-"calibrationControls": "Управление",
-"calibrationEdit": "Редактировать",
-"calibrationDelete": "Удалить",
-"calibrationInputName": "Введите название калибровки для сохранения",
-
-"chartPrintTable" : "Экран в Excel",
-"chartPrintInNewWindow" : "График на печать",
-"monochromeEventsPrint" : "Ч/Б печать",
-"eventListSave" : "Бланк",
-"saveChartTpl": "Сохр. шаблон",
-
-"flights": "Полеты",
-"fdrs": "Регистраторы",
-"calibrations": "Градуировки",
-"users": "Пользователи",
-"results": "Результаты",
-"search": "Поиск",
-"fileImport": "Импортировать",
-
-"dataTable": {
-    "sLengthMenu": "Показывать по _MENU_ записей на странице",
-    "sZeroRecords": "Поиск не дал результата",
-    "sInfo": "Показано с _START_ по _END_ запись из  _TOTAL_ ",
-    "sInfoEmpty": "Записи отсутствуют",
-    "sInfoFiltered": "(всего _MAX_ )",
-    "sSearch": "Поиск ",
-    "sProcessing": "Получение данных...",
-    "oPaginate": {
-        "sFirst": "Начало",
-        "sNext": "Следующий",
-        "sPrevious": "Предыдущий",
-        "sLast": "Конец"
-    }
-},
-
-"jsTree": {
-    "create": "Создать",
-    "rename": "Переименоваит",
-    "remove": "Удалить",
-    "export": "Экспортировать"
-},
-
-"indexPage":{
-    "title": "Добро пожаловать",
-    "search": "Поиск",
-    "find": "Найти",
-    "send": "Отправить",
-    "fileImport": "Импорт",
-    "fileConvert": "Конверт.",
-    "filePreview": "Предпросмотр",
-    "chooseFile": "Выберите файл",
-    "helpTitle": "Краткая информация",
-
-    "sliceCreation": "Создание среза",
-    "sliceName": "Название",
-    "sliceCode": "Код алгоритма",
-    "sliceList": "Перечень срезов",
-    "sliceCreationTime": "Дата создания",
-    "sliceLastModifyTime": "Дата последнего изменения",
-    "sliceParamsTableName": "Параметры",
-    "sliceStatusAsEtalon": "Статус",
-    "sliceSetAsEtalon": "Эталон",
-    "bruTypesList": "Перечень типов регистраторов",
-    "bruTypesName": "Тип регистратора",
-    "bruTypesStepLenth": "Длительность кадра (в секундах)",
-    "bruTypesFrameLength": "Размер кадра (в байтах)",
-    "bruTypesWordLength": "Размер слова (в байтах)",
-    "bruTypesAditionalInfo": "Доп. информация",
-    "bruTypesNoAditionalInfo": "Отсутствует",
-    "usersList": "Перечень пользователей",
-    "usersLogin": "Имя пользователя",
-    "usersCompany": "Организация",
-    "usersPrivilege": "Привелигии",
-    "usersSubscribers": "Подписчики",
-    "userNoSubscribers": "Нет",
-    "etalonName": "Название эталона",
-    "sliceNotSetAsEtalon": "Отсутствует",
-    "engineList": "Перечень невязок двигателей",
-    "engineSerial": "Номер двигателя",
-    "engineFlightLastTime": "Дата последнего полета",
-    "engineSliceCodes": "Перечень типов срезов",
-    "engineDescreps": "Перечень невязок",
-    "departureAirport": "Аэропорт вылета",
-    "arrivalAirport": "Аэропорт посадки",
-    "create": "Создать",
-
-    "message": "Сообщение",
-    "loginForm":"Добро пожаловать",
-    "login":"Авторизироваться",
-    "userName":"Логин",
-    "pass":"Пароль",
-    "rememberMe":"Запомнить",
-    "loginFailed": "Авторизация не удалась",
-
-    "centring": "Центровка",
-    "engines":"Номера дигателей",
-    "firstOfficer": "КВС",
-    "flightView": "Просмотр",
-    "flightFollow": "Следование",
-    "flightUpload": "Загрузка",
-
-    "flightDelete": "Удаление",
-    "flightExport": "Экспорт",
-    "flightImport": "Импорт",
-    "userExit": "Выход",
-    "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
-},
-
+"indexPage":{},
+"bruTypesPage":{},
 "flightsPage":{
     "upload": "Загрузить",
     "flightsItem": "Полеты",
@@ -434,7 +130,7 @@
     "emptyFlightComment": "Отсутствует"
 },
 
-"printerPage":{
+"flightEventsPage":{
     "pasport" : "Отчёт об обработке полётной информации",
     "bort" : "Борт",
     "voyage":"Рейс",
@@ -521,20 +217,6 @@
     "loginFailed": "Авторизация не удалась",
     "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
 },
-"slicePage":{
-    "sliceName" : "Название среза",
-    "selectedSlice" : "Выбранный срез",
-    "bort" : "Борт",
-    "voyage" : "Рейсы",
-    "engines" : "Номера двигателей",
-    "loginForm":"Добро пожаловать",
-    "login":"Авторизироваться",
-    "userName":"Логин",
-    "pass":"Пароль",
-    "rememberMe":"Запомнить",
-    "loginFailed": "Авторизация не удалась",
-    "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
-},
 "chartPage":{
     "bort" : "Борт",
     "voyage":"Рейс",
@@ -564,62 +246,6 @@
     "loginFailed": "Авторизация не удалась",
     "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
 },
-"followerPage":{
-    "bort" : "Борт",
-    "voyage":"Рейс",
-    "flightDate": "Дата полета",
-    "time": "Время",
-    "loginForm":"Добро пожаловать",
-    "login":"Авторизироваться",
-    "userName":"Логин",
-    "pass":"Пароль",
-    "rememberMe":"Запомнить",
-    "loginFailed": "Авторизация не удалась",
-    "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
-},
-
-"mapPage":{
-    "bort" : "Борт",
-    "voyage":"Рейс",
-    "flightDate": "Дата полета",
-    "time": "Время",
-    "loginForm":"Добро пожаловать",
-    "login":"Авторизироваться",
-    "userName":"Логин",
-    "pass":"Пароль",
-    "rememberMe":"Запомнить",
-    "loginFailed": "Авторизация не удалась",
-    "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
-},
-
-"modelPage":{
-    "bort" : "Борт",
-    "voyage":"Рейс",
-    "flightDate": "Дата полета",
-    "time": "Время",
-    "loginForm":"Добро пожаловать",
-    "login":"Авторизироваться",
-    "userName":"Логин",
-    "pass":"Пароль",
-    "rememberMe":"Запомнить",
-    "loginFailed": "Авторизация не удалась",
-    "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
-},
-
-"googleEarthPage":{
-    "bort" : "Борт",
-    "voyage":"Рейс",
-    "flightDate": "Дата полета",
-    "time": "Время",
-    "loginForm":"Добро пожаловать",
-    "login":"Авторизироваться",
-    "userName":"Логин",
-    "pass":"Пароль",
-    "rememberMe":"Запомнить",
-    "loginFailed": "Авторизация не удалась",
-    "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
-},
-
 "tablePage":{
     "bort" : "Борт",
     "voyage":"Рейс",
@@ -632,96 +258,6 @@
     "pass":"Пароль",
     "rememberMe":"Запомнить",
     "loginFailed": "Авторизация не удалась",
-    "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
-},
-
-"diagnosticPage":{
-    "accordionReport": "Отчет",
-    "reportFromDate": "От даты",
-    "reportToDate": "До даты",
-    "reportFlightDate": "Дата полета",
-    "reportDiscrepLimits": "Типы допуска",
-    "limitType0": "0) в пределах допуска на погрешность определения значений",
-    "limitType1": "1) в пределах профилактического допуска на измерение значений",
-    "limitType2": "2) в пределах контрольного допуска на измерение значений",
-    "limitType3": "3) за пределами контрольного допуска на измерение значений",
-    "reportEtalon": "Эталон",
-    "reportSlice": "Срез",
-    "reportEngine": "Двигатель",
-    "reportDiscrep": "Невязка",
-    "reportDiscrepVal": "Значение",
-    "reportLimitType": "Тип допуска",
-    "reportLimits": "Граници допуска",
-    "reportComment": "Комментарий",
-    "accordionLog": "Хроника",
-    "accordionDiagnostic": "Двухмерная диагностика",
-    "etalonName": "Название эталона",
-    "etalonIgnore": "Игнорировать эталоны",
-    "engineSerial": "Номер двигателя",
-    "engineSerialList": "Перечень номеров двигателя",
-    "engineSlicesList": "Перечень доступных срезов",
-    "engineDiscrepAbscissa": "Невязка по абсциссе (X)",
-    "flights": "Полеты",
-    "engineDiscrepOrdinate": "Невязки по ординате (Y)",
-    "engineDiscreps": "Невязки",
-    "addChart": "Построить график",
-    "discrepChartList": "Перечень графиков",
-    "editMarkings": "Настройки допусков",
-    "delChart": "Удалить график",
-    "message": "Сообщение",
-    "continueLabel": "Продолжить",
-    "loginForm":"Добро пожаловать",
-    "login":"Авторизироваться",
-    "userName":"Логин",
-    "pass":"Пароль",
-    "rememberMe":"Запомнить",
-    "loginFailed": "Авторизация не удалась",
-    "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
-},
-
-"bruTypesPage":{
-    "generalInfo":"Общая инф.",
-    "templates":"Шаблоны",
-    "cyclo":"Циклограмма",
-    "events":"События",
-    "defaultTpl" : "по умолчанию",
-    "lastTpl" : "Крайний вывод",
-    "foundedEventsTplName" : "Возникшие события",
-
-    "bruTypeCreation" : "Создание нового типа регистратора",
-    "bruTypeCreationForm":"Форма создания типа регистратора",
-    "bruTypeName":"Код регистратора (литиницей)",
-    "stepLength":"Длительность кадра (в сек)",
-    "stepDivider":"Максимальная опростность (в Гц)",
-    "frameLength":"Длина кадра (в байтах)",
-    "wordLength":"Размер слова (в байтах)",
-    "aditionalInfo":"Доп. информация",
-    "headerLength":"Размер заголовка (в байтах)",
-    "frameSyncroCode":"Синхрослово (в хексе)",
-    "previewParams":"Парамеры предпросмотра",
-    "collada":"Модель",
-    "headerScr":"Алгоритм обработки заголовка",
-    "bruTypeCreate":"Создать",
-    "apTable":"Таблица аналоговых параметров",
-    "apCode":"Код",
-    "apName":"Имя",
-    "apDim":"Ед. изм.",
-    "apChannel":"Каналы",
-    "apMask":"Маска",
-    "apCoe":"Коефициент",
-    "apMinus":"Минус",
-    "apShift":"Сдвиг",
-    "apType":"Тип",
-    "apMinVal":"Мин. значение",
-    "apMaxVal":"Макс. значение",
-    "apColor":"Цвет по умолчанию",
-    "apXY":"Градуировака",
-    "apSrc":"Алгоритм расчета",
-    "gradiCode": "Код",
-    "gradiPh": "Физика",
-    "addRow":"Добавить строчку",
-    "bpTable":"Таблица разовых комманд",
-    "message": "Сообщение",
     "notAllowedByPrivilege" : "Не достаточно привилегий для выполнения действия"
 },
 
